--- a/Maybi_GameStyles.css
+++ b/Maybi_GameStyles.css
@@ -48,7 +48,7 @@ a {
 
 @keyframes expandNav {
   from {height: 0px}
-  to {height: 200px}
+  to {height: calc(100% - 80px)}
 }
 
 .sidebarNav::-webkit-scrollbar {
